# multimedia-scraper

./: .gitignore  .pre-commit-config.yaml  README.md  _tasks.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
docs/api/: configuration.md  observability.md
docs/architecture/: async-model.md  configuration.md  dependency-rules.md  download-pipeline.md  error-handling.md  event-system.md  integration-boundaries.md  layering.md  logging.md  overview.md  playback-system.md  plugin-system.md  runtime-lifecycle.md  testing-strategy.md
docs/contracts/: DI_semantics.md  Integration_boundary_semantics.md  api_contract_semantics.md  authority_enforcement_semantics.md  capabiltiy_permission_semantics.md  concurrency_semantics.md  configuration_semantics.md  dependency_specification.md  event_semantics.md  failure_semantics.md  lifecycle_semantics.md  observability_semantics.md  plugin_semantics.md  resource_ownership_semantics.md  runtime_bootstrap_architecture.md  runtime_context.md  runtime_invarients.md  scheduling_execution_semantics.md  security_boundary_semantics.md  serialization_semantics.md  state_persistance_semantics.md  supervisor_tree_semantics.md  testing_verification_semantics.md
docs/decisions/: ADR-001-modular-monolith.md  ADR-002-strict-type-enforcement.md  ADR-003-dependency-governance.md  ADR-004-structured-tooling-pipeline.md  ADR-005-cross-platform-tooling-strategy.md
docs/development/: dependency-governance.md  testing-strategy.md  tooling.md
docs/testing/: contract-testing-guide.md  integration-testing-guide.md
docs/workflows/: repository_development_workflow_and_governance.md
src/multimedia_scraper/core/: exceptions.py
src/multimedia_scraper/core/config/: exceptions.py
src/multimedia_scraper/core/config/bootstrap/: coordinator.py  diagnostics.py  freeze.py  rollback.py  state.py
src/multimedia_scraper/core/config/di/: interfaces.py  policies.py  registration.py  views.py
src/multimedia_scraper/core/config/dto/: base.py  cache.py  ffmpeg.py  logging.py  runtime.py  secrets.py  serialization.py
src/multimedia_scraper/core/config/sources/: base.py  env.py  merge.py  models.py  resolver.py  secrets.py  types.py
src/multimedia_scraper/core/config/validators/: base.py  cross_field.py  paths.py  pipeline.py  primitives.py  registry.py  runtime.py  secrets.py
src/multimedia_scraper/core/errors/: __init__.py  base.py  concurrency.py  configuration.py  events.py  network.py  observability.py  plugins.py  resources.py  runtime.py  security.py  serialization.py  subprocess.py  supervision.py
src/multimedia_scraper/core/observability/bootstrap/: bootstrap_diagnostics.py  bootstrap_logger.py  bootstrap_observability.py  bootstrap_snapshot.py  bootstrap_state.py  degraded_logger.py  degraded_mode.py  early_bootstrap_buffer.py  startup_diagnostics.py
src/multimedia_scraper/core/observability/context/: constants.py  propagation.py  runtime_context.py
src/multimedia_scraper/core/observability/contracts/: backpressure.py  context.py  emitter.py  events.py  filtering.py  formatter.py  health.py  lifecycle.py  logger.py  pipeline.py  (+5 more)
src/multimedia_scraper/core/runtime/: di.py
src/multimedia_scraper/plugins/: types.py
src/multimedia_scraper/plugins/contracts/: __init__.py  plugin.py  states.py
src/multimedia_scraper/plugins/dto/: __init__.py  capability.py  capability_registration.py  diagnostics.py  discovery.py  loader.py  manifest.py  plugin_metadata.py  provider_registration.py  registration.py  runtime.py
src/multimedia_scraper/plugins/loader/: compatibility.py  discovery.py  exceptions.py  filesystem.py  importer.py  loader.py  parser.py
src/multimedia_scraper/plugins/registry/: __init__.py  capabilities.py  exceptions.py  registry.py  snapshots.py  validation.py
src/multimedia_scraper/plugins/runtime/: container.py  context.py  exceptions.py  supervision.py  tasks.py
src/multimedia_scraper/runtime/: __init__.py  bootstrap.py  cancellation.py  context.py  event_bus.py  events.py  exceptions.py  lifecycle.py  metadata.py  protocols.py  registry.py  supervisor.py  task.py
tests/: test_placeholder.py
tests/integration/config/: test_bootstrap_immutability.py  test_config_determinism.py  test_environment_isolation.py  test_failure_rollback.py  test_full_bootstrap_flow.py
tests/integration/observability/: test_bootstrap_observability.py  test_degraded_mode.py  test_pipeline_backpressure.py  test_shutdown_flush.py  test_sink_failure_isolation.py
tests/plugins/contracts/: test_capability_contract.py  test_lifecycle_contract.py  test_loader_contract.py  test_registration_contracts.py  test_shutdown_contracts.py  test_topology_contract.py
tests/plugins/fixtures/: plugins.py  runtime.py
tests/property/observability/: test_redaction_properties.py  test_serialization_properties.py
tests/runtime/: conftest.py  test_cancellation.py  test_event_bus.py  test_runtime_bootstrap.py  test_runtime_cancellation.py  test_runtime_cleanup.py  test_runtime_concurrency.py  test_runtime_context.py  test_runtime_event_bus.py  test_runtime_failures.py  test_runtime_failures_2.py  test_runtime_immutability.py  test_runtime_immutability_2.py  test_runtime_isolation.py  test_runtime_observability.py  test_runtime_registry.py  test_runtime_shutdown.py  test_runtime_superviser_2.py  test_runtime_supervisor.py  test_supervisor.py
tests/stress/observability/: test_cancellation_storm.py  test_concurrent_logging.py  test_queue_pressure.py
tests/unit/config/bootstrap/: test_dependency_integrity.py  test_frozen_runtime_config.py
tests/unit/config/di/: test_service_collection_freeze.py
tests/unit/config/dto/: test_runtime_config_dto.py  test_secret_leakage.py  test_secret_redaction.py
tests/unit/config/sources/: test_environment_provider.py  test_merge_determinism.py
tests/unit/config/validators/: test_cross_field_validation.py  test_runtime_dto_factory.py  test_unkown_fields.py
tests/unit/observability/: test_async_context_propogation.py  test_canonical_json.py  test_queue_overflow.py  test_redaction.py  test_serialization_safety.py
(+41 files in other folders)
