[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "multimedia-scraper"
version = "0.6.0"
description = "Modular multimedia aggregation and streaming platform"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Ankit Saini" }
]
keywords = [
    "multimedia",
    "streaming",
    "plugins",
    "async",
    "scraper",
]

dependencies = [
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "strenum>=0.4.15",
    "structlog>=24.1.0",
    "typing-extensions>=4.11.0; python_version < '3.11'",
]

[project.optional-dependencies]
# Install with: uv sync --extra dev
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.0",
    "deptry>=0.16.0",
    "import-linter>=2.0",
    "vulture>=2.10",
    "pytest-xdist>=3.5.0",
    "poethepoet>=0.46.0",
    "hypothesis"
]

[project.urls]
Repository = "https://github.com/ankitsaini3/multimedia-scraper"

[tool.hatch.build.targets.wheel]
packages = ["src/multimedia_scraper"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "--cov=multimedia_scraper",
    "--cov-report=term-missing",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["multimedia_scraper"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C90"]
ignore = ["E501"]  # Handled by formatter



[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.deptry]
# Updated key (old key will be removed in next release)
optional_dependencies_dev_groups = ["dev"]

# Exclude non-source directories to reduce false positives
exclude = ["tests", ".venv", "docs", "build", "dist", "_tasks.py"]

known_first_party = ["multimedia_scraper"]

# Ignore importlib_metadata for missing dependency checks (DEP001)
[tool.deptry.per_rule_ignores]
DEP001 = ["importlib_metadata"]
DEP002 = [                       # Unused dependency false positives
  "pydantic",
  "pydantic-settings",
  "structlog",
  "typing-extensions",
]

[tool.importlinter]
source_dirs = ["src"]

# ─────────────────────────────────────────────────────────────
# Commands
# ─────────────────────────────────────────────────────────────

[tool.poe.tasks.fmt]
cmd = "ruff format ."
help = "Auto-format all Python files with Ruff to enforce consistent code style"

[tool.poe.tasks.fmt-chk]
cmd = "ruff format --check ."
help = "Check if files are correctly formatted without modifying them (fails if formatting is needed)"

[tool.poe.tasks.lint]
cmd = "ruff check . --fix"
help = "Scan codebase with Ruff and automatically fix safe linting issues"

[tool.poe.tasks.lint-chk]
cmd = "ruff check ."
help = "Run Ruff linter in check-only mode to report all code quality issues"

[tool.poe.tasks.type]
cmd = "mypy src/multimedia_scraper"
help = "Perform static type checking with mypy to catch type-related bugs"

[tool.poe.tasks.test]
cmd = "pytest -n auto --dist loadfile"
help = "Run the test suite in parallel across all available CPU cores for faster execution"

[tool.poe.tasks.cov]
cmd = "pytest --cov=multimedia_scraper --cov-report=term-missing"
help = "Run tests with code coverage and display missing/uncovered lines in the terminal"

[tool.poe.tasks.check]
sequence = ["fmt-chk", "lint-chk", "type", "test"]
help = "Run all local pre-commit checks sequentially (format, lint, type, tests)"

[tool.poe.tasks.ci]
sequence = ["clean", "fmt-chk", "lint-chk", "type", "cov"]
help = "Full CI pipeline: clean artifacts, check formatting & linting, verify types, and generate coverage"

[tool.poe.tasks.clean]
script = "_tasks:clean"
help = "Run custom Python script to remove caches, build artifacts, and temporary files"

[tool.poe.tasks.arch]
cmd = "lint-imports"
help = "Check architectural boundaries with ImportLinter (forbidden imports)"

[tool.poe.tasks.deps]
cmd = "deptry src/"
help = "Check dependencies in source code only (avoids false positives from tests/scripts)"


# ─────────────────────────────────────────────────────────────
# Architecture Contracts
# ─────────────────────────────────────────────────────────────

[[tool.importlinter.contracts]]
name = "Core cannot import infrastructure"
type = "forbidden"
source_modules = ["multimedia_scraper.core"]
forbidden_modules = ["multimedia_scraper.infrastructure"]
ignore_imports = [
    # Add acceptable exceptions here, e.g.:
    # "multimedia_scraper.core.utils -> multimedia_scraper.infrastructure.logging",
]

[[tool.importlinter.contracts]]
name = "Plugins cannot import app layer"
type = "forbidden"
source_modules = ["multimedia_scraper.plugins"]
forbidden_modules = ["multimedia_scraper.app"]

[[tool.importlinter.contracts]]
name = "Core isolated from plugins"
type = "forbidden"
source_modules = ["multimedia_scraper.core"]
forbidden_modules = ["multimedia_scraper.plugins"]

[[tool.importlinter.contracts]]
name = "Infrastructure cannot import plugins"
type = "forbidden"
source_modules = ["multimedia_scraper.infrastructure"]
forbidden_modules = ["multimedia_scraper.plugins"]

[[tool.importlinter.contracts]]
name = "Source code cannot import tests"
type = "forbidden"
source_modules = ["multimedia_scraper"]
forbidden_modules = ["tests"]
match_submodules = true
